# cereal-adventure

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
art/: assets.blend  assets.dia  assets_light_test.blend  cereal_box.blend  cereal_box_backup.blend  cereal_box_new_run.blend
assets/cereal-box/: cereal_box.dia  cereal_box.dimo  cereal_box.ysce  cereal_box_bezier.dimo  cereal_box_light_test.dia  cereal_box_light_test.ysce  cereal_box_new_run.dia  cereal_box_new_run.dimo  cereal_box_new_run.ysce
assets/shaders/glsl/: depth_only.vert  main.frag  main.vert  shadow.vert
assets/shaders/glsl/bloom/: bloom.frag
assets/shaders/glsl/blur/: blur.frag
assets/shaders/glsl/ssao/: ssao.frag
dependencies/delta/engines/basic/shaders/: delta_engine_shader.fx
dependencies/delta/include/: yds_opengl_device.h
dependencies/delta/lib/x64/Debug/: delta-physics.lib
dependencies/delta/lib/x86/Debug/: delta-basic-engine.lib  delta-physics.lib
include/: aabb.h  asset_loader.h  blur_stage.h  cabinet.h  ceiling_light_source.h  cereal_adventure_app.h  clock.h  collectible_item.h  colors.h  cooldown_timer.h  counter.h  death_component.h  debug_camera_controller.h  demo_lighting_controller.h  demo_shader_controls.h  fan.h  fire_damage_component.h  fridge.h  fruit_bowl.h  fruit_projectile.h  game_object.h  game_objects.h  jitter_filter.h  ledge.h  light_object.h  math_utilities.h  microwave.h  milk_carton.h  os_utilities.h  oven.h  player.h  player_arms_fsm.h  player_legs_fsm.h  projectile_damage_component.h  realm.h  scene_lighting_controller.h  shader_controls.h  shaders.h  shelves.h  single_shelf.h  (+18 more)
project/: cereal-adventure-shared-workspace.sln  cereal-adventure.sln
project/cereal-adventure/: cereal-adventure.vcxproj  cereal-adventure.vcxproj.filters  frame_breakdown_log.csv
scripts/: fetch_local_delta_build.py  package_build.py
src/: asset_loader.cpp  blur_stage.cpp  cabinet.cpp  ceiling_light_source.cpp  cereal_adventure_app.cpp  clock.cpp  collectible_item.cpp  colors.cpp  cooldown_timer.cpp  counter.cpp  death_component.cpp  debug_camera_controller.cpp  demo_lighting_controller.cpp  demo_shader_controls.cpp  fan.cpp  fire_damage_component.cpp  fridge.cpp  fruit_bowl.cpp  fruit_projectile.cpp  game_object.cpp  jitter_filter.cpp  ledge.cpp  light_object.cpp  main.cpp  math_utilities.cpp  microwave.cpp  milk_carton.cpp  os_utilities.cpp  oven.cpp  player.cpp  player_arms_fsm.cpp  player_legs_fsm.cpp  projectile_damage_component.cpp  realm.cpp  scene_lighting_controller.cpp  shaders.cpp  shelves.cpp  single_shelf.cpp  sink.cpp  spring_connector.cpp  (+16 more)
